Fix icon alignment issues

--- a/projects/plugins/boost/app/assets/src/css/components/isa/recommendations/row-types/image-size-row.scss
+++ b/projects/plugins/boost/app/assets/src/css/components/isa/recommendations/row-types/image-size-row.scss
@@ -26,7 +26,7 @@
 			margin-bottom: 12px;
 		}
 
-		.jb-icon {
+		.jb-expanded-icon {
 			margin-right: 12px;
 			display: inline-block;
 			aspect-ratio: 1;
